<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false"
    android:background="#D81B60"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="#FDD835"
        android:fontFamily="sans-serif"
        android:hint="@string/result_will_be_here"
        android:lineSpacingExtra="8sp"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="#FDD835"
        android:ems="10"
        android:hint="@string/enter_number_1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:background="#FDD835"
        android:ems="10"
        android:hint="@string/enter_number_2"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <Button
        android:id="@+id/button"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="#5E35B1"
        android:onClick="onAdd"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        android:textColorLink="#FDD835"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="#5E35B1"
        android:onClick="onSub"
        android:text="@string/sub"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="#5E35B1"
        android:onClick="onMul"
        android:text="@string/mul"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="#5E35B1"
        android:onClick="onDiv"
        android:text="@string/div"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="93dp"
        android:layout_height="58dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="#5E35B1"
        android:onClick="onMod"
        android:text="@string/mod"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

</androidx.constraintlayout.widget.ConstraintLayout>